--- a/tablet.css
+++ b/tablet.css
@@ -358,8 +358,11 @@
           display: flex;
           flex-direction: column;
           justify-content: center;
-          width: 100vw;
-          /*max-width: 400px;*/
+          width: 90vw;
+          /* max-width: 400px; */
+          margin-bottom: 10vw;
+          position: relative;
+          margin: auto;
         }
       
         .front-content {
@@ -873,8 +876,11 @@
           display: flex;
           flex-direction: column;
           justify-content: center;
-          width: 100vw;
-          max-width: 400px;
+          width: 90vw;
+          /* max-width: 400px; */
+          margin-bottom: 10vw;
+          position: relative;
+          margin: auto;
         }
       
         .front-content {
@@ -1372,8 +1378,11 @@
           display: flex;
           flex-direction: column;
           justify-content: center;
-          width: 100vw;
-          max-width: 400px;
+          width: 90vw;
+          /* max-width: 400px; */
+          margin-bottom: 10vw;
+          position: relative;
+          margin: auto;
         }
       
         .front-content {
