--- a/tablet.css
+++ b/tablet.css
@@ -203,10 +203,9 @@
           right: 0;
           top: 0;
           margin: auto;
-          margin-top: 5px;
-          margin-left: 5px;
-          margin-right: 5px;
-          /* margin-bottom: 20px; */
+          margin-left: .5vw;
+          margin-right: .5vw;
+          margin-bottom: 5vw;
           width: 60vw;
           /*max-width: 400px;*/
           height: 10vw;
@@ -729,14 +728,11 @@
           right: 0;
           top: 0;
           margin: auto;
-          margin-top: 5px;
-          margin-left: 5px;
-          margin-right: 5px;
-          /* margin-bottom: 20px; */
-          width: 220px;
-          max-width: 400px;
+          margin-left: .5vw;
+          margin-right: .5vw;
+          margin-bottom: 5vw;
           text-align: center;
-          font-size: 1.5rem;
+          font-size: 6vw;
           color: white;
           /* padding: .25rem; */
           padding-top: .25rem;
@@ -1232,14 +1228,11 @@
           right: 0;
           top: 0;
           margin: auto;
-          margin-top: 5px;
-          margin-left: 5px;
-          margin-right: 5px;
-          /* margin-bottom: 20px; */
-          width: 220px;
-          max-width: 400px;
+          margin-left: .5vw;
+          margin-right: .5vw;
+          margin-bottom: 5vw;
+          font-size: 6vw;
           text-align: center;
-          font-size: 1.5rem;
           color: white;
           /* padding: .25rem; */
           padding-top: .25rem;
