--- a/tablet.css
+++ b/tablet.css
@@ -890,9 +890,9 @@
           right: 0;
           margin: auto;
           text-align: center;
-          width: 90%;
-          height: 28%;
-          min-height: 135px;
+          width: 80vw;
+          height: 30vw;
+          /*min-height: 135px;*/
           /* padding: 5px; */
           margin-top: 10px;
           /* margin-bottom: 20vh; */
