--- a/widescreen.css
+++ b/widescreen.css
@@ -3,7 +3,7 @@
   .wrapper {
     display: flex;  
     flex-flow: row wrap;
-    font-weight: bold;
+    /*font-weight: bold;*/
     text-align: center;
   }
   
