--- a/assets/letters/verse.css
+++ b/assets/letters/verse.css
@@ -15,7 +15,7 @@ body, html {
 #verse-content {
     position: relative;
     width: 90vw;
-    height: 80vh;
+    height: 75vh;
     left: 0;
     right: 0;
     margin: auto;
@@ -29,7 +29,7 @@ body, html {
     right: 0;
     margin: auto;
     margin-top: 2vw;
-    margin-bottom: 4vw;
+    margin-bottom: 6vh;
     width: 200px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
