--- a/phone.css
+++ b/phone.css
@@ -132,7 +132,7 @@
           background-color: rgb(223, 109, 252);
           font-size: 1.25rem;
           width: 200px;
-          height: 190%;
+          height: 60vh;
           /* width: auto; */
           /* min-width: 100px; */
           border-radius: 4px;
@@ -624,7 +624,7 @@
           background-color: rgb(223, 109, 252);
           font-size: 1.25rem;
           width: 200px;
-          height: 190%;
+          height: 60vh;
           /* width: auto; */
           /* min-width: 100px; */
           border-radius: 4px;
@@ -1108,7 +1108,7 @@
           background-color: rgb(223, 109, 252);
           font-size: 1.25rem;
           width: 200px;
-          height: 190%;
+          height: 60vh;
           /* width: auto; */
           /* min-width: 100px; */
           border-radius: 4px;
