--- a/phone.css
+++ b/phone.css
@@ -376,6 +376,8 @@
           border-radius: 20%/50%;
           cursor: pointer;
           box-shadow: 2px 2px 8px black;
+         background: white;
+         object-fit: contain;
         }
       
         .scripture {
