--- a/phone.css
+++ b/phone.css
@@ -866,6 +866,8 @@
           border-radius: 20%/50%;
           cursor: pointer;
           box-shadow: 2px 2px 8px black;
+         background: white;
+         object-fit: contain;
         }
       
         .scripture {
@@ -1350,6 +1352,8 @@
           border-radius: 20%/50%;
           cursor: pointer;
           box-shadow: 2px 2px 8px black;
+         background: white;
+         object-fit: contain;
         }
       
         .scripture {
