--- a/widescreen.css
+++ b/widescreen.css
@@ -331,7 +331,7 @@
     width: 100%;
     /*height: 225px;*/
     max-height: 225px;
-    /*min-height: 225px;*/
+    min-height: 220px;
     /* padding: 5px; */
     margin-top: 10px;
     /* margin-bottom: 20vh; */
