--- a/pages/pages.css
+++ b/pages/pages.css
@@ -40,9 +40,13 @@ overflow: hidden;
     position: relative;
     font-size: 2.5vh;
     margin: auto;
-    margin-top: 6vw;
-    margin-bottom: 6vw;
-    width: 25vw;
+    margin-top: 2vh;
+    margin-bottom: 4vh;
+    width: 160px;
+    text-align: center;
+    background-color: rgba(255, 0, 0, 0.719);
+    color: white;
+    padding: 10px;
     text-align: center;
     background-color: rgba(255, 0, 0, 0.719);
     color: white;
