--- a/pages/pages.css
+++ b/pages/pages.css
@@ -38,11 +38,11 @@ overflow: hidden;
 }
 .decision a {
     position: relative;
-    font-size: 2.5vh;
+    /*font-size: 2.5vh;*/
     margin: auto;
     margin-top: 2vh;
     margin-bottom: 4vh;
-    width: 160px;
+    width: 140px;
     text-align: center;
     background-color: rgba(255, 0, 0, 0.719);
     color: white;
