--- a/pages/pages.css
+++ b/pages/pages.css
@@ -50,7 +50,7 @@ overflow: hidden;
     text-align: center;
     background-color: rgba(255, 0, 0, 0.719);
     color: white;
-    padding: 1em 1.5em;
+    padding: 10px;
     text-decoration: none;
     text-transform: uppercase;
     border-radius: 6px;
