--- a/smallscreen.css
+++ b/smallscreen.css
@@ -116,7 +116,7 @@ user-select: none;
     z-index: 1;
   }
   
-  /* Links inside the dropdown */
+  /* Links inside the dropdown
   .dropdown-content a {
     
     color: white;
@@ -126,7 +126,21 @@ user-select: none;
   }
   
   /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {
+  /* .dropdown-content a:hover {
+      background-color: rgb(204, 0, 255);
+  } */
+
+  /* Links inside the dropdown */
+  .normal-links {
+    
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .normal-links:hover {
       background-color: rgb(204, 0, 255);
   }
   
@@ -344,7 +358,9 @@ user-select: none;
   }
 
   .showScripture{
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 1.05rem;
     left: 0;
     right: 0;
@@ -403,4 +419,17 @@ user-select: none;
 
   .sidebar {
     display: none;
+  }
+  
+  .bonus {
+    background-color: gold;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+  .bonus:hover {
+    background-color: rgb(219, 187, 2);
+    color: white;
   }
