--- a/phone.css
+++ b/phone.css
@@ -140,19 +140,33 @@
           z-index: 200;
         }
         
-        /* Links inside the dropdown */
-        .dropdown-content a {
-          
-          color: white;
-          padding: 12px 16px;
-          text-decoration: none;
-          display: block;
-        }
-        
-        /* Change color of dropdown links on hover */
-        .dropdown-content a:hover {
-            background-color: rgb(204, 0, 255);
-        }
+        /* Links inside the dropdown
+  .dropdown-content a {
+    
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  /* .dropdown-content a:hover {
+      background-color: rgb(204, 0, 255);
+  } */
+
+  /* Links inside the dropdown */
+  .normal-links {
+    
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .normal-links:hover {
+      background-color: rgb(204, 0, 255);
+  }
         
       .show::-webkit-scrollbar {/*custom scroll bar */
       width: 1.25rem;
@@ -385,7 +399,9 @@
         }
       
         .showScripture{
-          display: block;
+          display: flex;
+          justify-content: center;
+          align-items: center;
           font-size: 1.05rem;
           left: 0;
           right: 0;
@@ -493,6 +509,19 @@
 
         .glass {
           display: none;
+        }
+
+        .bonus {
+          background-color: gold;
+          color: black;
+          padding: 12px 16px;
+          text-decoration: none;
+          display: block;
+        }
+      
+        .bonus:hover {
+          background-color: rgb(219, 187, 2);
+          color: white;
         }
  }
 
@@ -634,19 +663,33 @@
           z-index: 1;
         }
         
-        /* Links inside the dropdown */
-        .dropdown-content a {
-          
-          color: white;
-          padding: 12px 16px;
-          text-decoration: none;
-          display: block;
-        }
-        
-        /* Change color of dropdown links on hover */
-        .dropdown-content a:hover {
-            background-color: rgb(204, 0, 255);
-        }
+        /* Links inside the dropdown
+  .dropdown-content a {
+    
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  /* .dropdown-content a:hover {
+      background-color: rgb(204, 0, 255);
+  } */
+
+  /* Links inside the dropdown */
+  .normal-links {
+    
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .normal-links:hover {
+      background-color: rgb(204, 0, 255);
+  }
         
         .show::-webkit-scrollbar {/*custom scroll bar */
          width: 1.25rem;
@@ -875,7 +918,9 @@
         }
       
         .showScripture{
-          display: block;
+          display: flex;
+          justify-content: center;
+          align-items: center;
           font-size: 1.05rem;
           left: 0;
           right: 0;
@@ -977,6 +1022,20 @@
   .glass {
     display: none;
   }
+
+  .bonus {
+    background-color: gold;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+  .bonus:hover {
+    background-color: rgb(219, 187, 2);
+    color: white;
+  }
+
  }
  /* ###########################################################################################################################################
  ########################################################################################################################################### */
@@ -1120,19 +1179,33 @@
           z-index: 1;
         }
         
-        /* Links inside the dropdown */
-        .dropdown-content a {
-          
-          color: white;
-          padding: 12px 16px;
-          text-decoration: none;
-          display: block;
-        }
-        
-        /* Change color of dropdown links on hover */
-        .dropdown-content a:hover {
-            background-color: rgb(204, 0, 255);
-        }
+        /* Links inside the dropdown
+  .dropdown-content a {
+    
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  /* .dropdown-content a:hover {
+      background-color: rgb(204, 0, 255);
+  } */
+
+  /* Links inside the dropdown */
+  .normal-links {
+    
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .normal-links:hover {
+      background-color: rgb(204, 0, 255);
+  }
         
         .show::-webkit-scrollbar {/*custom scroll bar */
          width: 1.25rem;
@@ -1361,7 +1434,9 @@
         }
       
         .showScripture{
-          display: block;
+          display: flex;
+          justify-content: center;
+          align-items: center;
           font-size: 1.05rem;
           left: 0;
           right: 0;
@@ -1463,4 +1538,18 @@
         .glass {
           display: none;
         }
+        
+        .bonus {
+          background-color: gold;
+          color: black;
+          padding: 12px 16px;
+          text-decoration: none;
+          display: block;
+        }
+      
+        .bonus:hover {
+          background-color: rgb(219, 187, 2);
+          color: white;
+        }
+
   }
