--- a/widescreen.css
+++ b/widescreen.css
@@ -176,18 +176,31 @@
     z-index: 200;
   }
   
-  /* Links inside the dropdown */
+  /* Links inside the dropdown
   .dropdown-content a {
     
     color: white;
     padding: 12px 16px;
     text-decoration: none;
-    ;
     display: block;
   }
   
   /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {
+  /* .dropdown-content a:hover {
+      background-color: rgb(204, 0, 255);
+  } */
+
+  /* Links inside the dropdown */
+  .normal-links {
+    
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .normal-links:hover {
       background-color: rgb(204, 0, 255);
   }
   
@@ -351,7 +364,9 @@
 
   .showScripture{
     position: relative;
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 1.05rem;
     left: 0;
     right: 0;
@@ -450,6 +465,19 @@
     display: none;
   }
   
+  .bonus {
+    background-color: gold;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+  .bonus:hover {
+    background-color: rgb(219, 187, 2);
+    color: white;
+  }
+
   /* .sidebar {
     display: none;
   } */
