--- a/phone.css
+++ b/phone.css
@@ -131,7 +131,7 @@
           position: absolute;
           background-color: rgb(223, 109, 252);
           font-size: 1.25rem;
-          width: 200px;
+          width: 60vw;
           height: 60vh;
           /* width: auto; */
           /* min-width: 100px; */
@@ -654,7 +654,7 @@
           position: absolute;
           background-color: rgb(223, 109, 252);
           font-size: 1.25rem;
-          width: 200px;
+          width: 60vw;
           height: 60vh;
           /* width: auto; */
           /* min-width: 100px; */
@@ -1170,7 +1170,7 @@
           position: absolute;
           background-color: rgb(223, 109, 252);
           font-size: 1.25rem;
-          width: 200px;
+          width: 60vw;
           height: 60vh;
           /* width: auto; */
           /* min-width: 100px; */
