--- a/phone.css
+++ b/phone.css
@@ -391,7 +391,7 @@
           cursor: pointer;
           box-shadow: 2px 2px 8px black;
          background: white;
-         object-fit: contain;
+         /* object-fit: contain; */
         }
       
         .scripture {
@@ -479,6 +479,22 @@
           cursor: pointer;
         }
 
+        
+        .kids-letter-button {
+          display: none;
+          height: 100px;
+          width: 75px;
+          background: black;
+          /* position: absolute; */
+          left: 300px;
+          right: 0;
+          margin: auto;
+          bottom: 100px;
+          border-radius: 3px;
+          box-shadow: 2px 2px 8px black;
+          cursor: pointer;
+        }
+
         .bottle {
           display: block;
         }
@@ -492,7 +508,7 @@
           right: 0;
           top: 5px;
           margin: auto;
-          margin-top: 5px;
+          /* margin-top: 5px; */
           padding-top: 2px;
           /* padding-bottom: 4px; */
           padding-left: 4px;
@@ -507,6 +523,30 @@
           font-size: 12px;
         }
 
+        
+        .kids-page {
+          height: 90%;
+          width: 65px;
+          background: white;
+          position: relative;
+          left: 0;
+          right: 0;
+          top: 5px;
+          margin: auto;
+          padding-top: 2px;
+          /* padding-bottom: 4px; */
+          padding-left: 4px;
+          padding-right: 4px;
+          font-size: 22px;
+          overflow: hidden;
+        }
+
+        .kids-page-title {
+          padding-top: 4px;
+          text-align: center;
+          font-size: 12px;
+        }
+  
         .glass {
           display: none;
         }
@@ -522,6 +562,15 @@
         .bonus:hover {
           background-color: rgb(219, 187, 2);
           color: white;
+        }
+
+        .letter-container {
+          display: flex;
+          /* position: absolute;
+          left: 100px;
+          right: 0;
+          margin: auto;
+          bottom: 0; */
         }
  }
 
@@ -910,7 +959,7 @@
           cursor: pointer;
           box-shadow: 2px 2px 8px black;
          background: white;
-         object-fit: contain;
+         /* object-fit: contain; */
         }
       
         .scripture {
@@ -995,17 +1044,36 @@
     box-shadow: 2px 2px 8px black;
     cursor: pointer;
   }
+        
+  .kids-letter-button {
+    display: none;
+    height: 100px;
+    width: 75px;
+    background: black;
+    /* position: absolute; */
+    left: 300px;
+    right: 0;
+    margin: auto;
+    bottom: 100px;
+    border-radius: 3px;
+    box-shadow: 2px 2px 8px black;
+    cursor: pointer;
+  }
+
+  .bottle {
+    display: block;
+  }
 
   .page {
     height: 90%;
     width: 65px;
     background: white;
-    /*position: absolute;*/
+    position: relative;
     left: 0;
     right: 0;
     top: 5px;
     margin: auto;
-    margin-top: 5px;
+    /* margin-top: 5px; */
     padding-top: 2px;
     /* padding-bottom: 4px; */
     padding-left: 4px;
@@ -1016,6 +1084,31 @@
 
   .page-title {
     padding-top: 2px;
+    text-align: center;
+    font-size: 12px;
+  }
+
+  
+  .kids-page {
+    height: 90%;
+    width: 65px;
+    background: white;
+    position: relative;
+    left: 0;
+    right: 0;
+    top: 5px;
+    margin: auto;
+    padding-top: 2px;
+    /* padding-bottom: 4px; */
+    padding-left: 4px;
+    padding-right: 4px;
+    font-size: 22px;
+    overflow: hidden;
+  }
+
+  .kids-page-title {
+    padding-top: 4px;
+    text-align: center;
     font-size: 12px;
   }
 
@@ -1034,6 +1127,15 @@
   .bonus:hover {
     background-color: rgb(219, 187, 2);
     color: white;
+  }
+
+  .letter-container {
+    display: flex;
+    /* position: absolute;
+    left: 100px;
+    right: 0;
+    margin: auto;
+    bottom: 0; */
   }
 
  }
@@ -1426,7 +1528,7 @@
           cursor: pointer;
           box-shadow: 2px 2px 8px black;
          background: white;
-         object-fit: contain;
+         /* object-fit: contain; */
         }
       
         .scripture {
@@ -1511,17 +1613,36 @@
           box-shadow: 2px 2px 8px black;
           cursor: pointer;
         }
+        
+        .kids-letter-button {
+          display: none;
+          height: 100px;
+          width: 75px;
+          background: black;
+          /* position: absolute; */
+          left: 300px;
+          right: 0;
+          margin: auto;
+          bottom: 100px;
+          border-radius: 3px;
+          box-shadow: 2px 2px 8px black;
+          cursor: pointer;
+        }
 
+        .bottle {
+          display: block;
+        }
+  
         .page {
           height: 90%;
           width: 65px;
           background: white;
-          /*position: absolute;*/
+          position: relative;
           left: 0;
           right: 0;
           top: 5px;
           margin: auto;
-          margin-top: 5px;
+          /* margin-top: 5px; */
           padding-top: 2px;
           /* padding-bottom: 4px; */
           padding-left: 4px;
@@ -1532,13 +1653,38 @@
 
         .page-title {
           padding-top: 2px;
+          text-align: center;
           font-size: 12px;
         }
 
+        
+        .kids-page {
+          height: 90%;
+          width: 65px;
+          background: white;
+          position: relative;
+          left: 0;
+          right: 0;
+          top: 5px;
+          margin: auto;
+          padding-top: 2px;
+          /* padding-bottom: 4px; */
+          padding-left: 4px;
+          padding-right: 4px;
+          font-size: 22px;
+          overflow: hidden;
+        }
+
+        .kids-page-title {
+          padding-top: 4px;
+          text-align: center;
+          font-size: 12px;
+        }
+  
         .glass {
           display: none;
         }
-        
+
         .bonus {
           background-color: gold;
           color: black;
@@ -1550,6 +1696,15 @@
         .bonus:hover {
           background-color: rgb(219, 187, 2);
           color: white;
+        }
+
+        .letter-container {
+          display: flex;
+          /* position: absolute;
+          left: 100px;
+          right: 0;
+          margin: auto;
+          bottom: 0; */
         }
 
   }
