--- a/widescreen.css
+++ b/widescreen.css
@@ -584,6 +584,34 @@
     border-radius: 30%/50%;
     background-color: rgb(255, 221, 29);
   }
+  
+  .tooltip {
+    position: relative;
+    display: inline-block;
+    background-color: rgb(142, 250, 155);
+    padding: 0 5px;
+    border-radius: 20%/50%;
+    cursor: pointer;
+  }
+
+  .tooltip .tooltiptext {
+    position: absolute;
+    z-index: 1;
+    visibility: hidden;
+    width: 500px;
+    bottom: -600%;
+    left: 50%;
+    margin-left: -800px;
+    background-color: lightblue;
+    font-size: 18px;
+    text-align: center;
+    padding: 5px;
+    border-radius: 6px;
+  }
+
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+  }
   /* .sidebar {
     display: none;
   } */
