changed .showScripture padding in phone.css

--- a/phone.css
+++ b/phone.css
@@ -414,7 +414,7 @@
     right: 0;
     margin: auto;
     text-align: center;
-    padding: 13px;
+    padding: 8px 15px;
     width: 90%;
     height: 40%;
     min-height: 150px;
@@ -1082,7 +1082,7 @@
     right: 0;
     margin: auto;
     text-align: center;
-    padding: 13px;
+    padding: 8px 15px;
     width: 90%;
     height: 40%;
     min-height: 150px;
@@ -1732,7 +1732,7 @@
     right: 0;
     margin: auto;
     text-align: center;
-    padding: 13px;
+    padding: 8px 15px;
     width: 90%;
     height: 40%;
     min-height: 150px;
